app/static/stylesheets/header.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
}

p, a, h1, h2, h3, h4, h5, h6 {
    margin: 0;
    font-family: 'Trebuchet MS', Helvetica, sans-serif;
}

header {
    position: fixed;
    width: 100%;
    height: 4rem;
    top: 0;
    left: 0;
    right: 0;
    z-index: 100;
}

.header-link {
    text-decoration: none;
}

.main-content {
    margin-top: 4rem;
}

